- Modified: inner html for '/about' link on index page

--- a/mainsite/templates/mainsite/index.html
+++ b/mainsite/templates/mainsite/index.html
@@ -31,7 +31,7 @@
                             to explore strange new code, to seek out new life <br /> and new
                             civilizations (from the safety of a websocket), <br /> to boldly code what no man (or woman) has coded before.</p>
 						<ul class="actions">
-							<li><a href="/about" class="button big">Learn More</a></li>
+							<li><a href="/about" class="button big">About Me</a></li>
 						</ul>
 					</section>
 
