- Added: SSL configurations for HTTPS transmission

--- a/mainsite/templates/mainsite/about.html
+++ b/mainsite/templates/mainsite/about.html
@@ -39,7 +39,7 @@
 
         .greeting {
             width: 80%;
-            {# text-align: center; #}
+            text-align: center;
         }
 
         h2 {
