--- a/mainsite/templates/mainsite/keybase.html
+++ b/mainsite/templates/mainsite/keybase.html
@@ -13,35 +13,35 @@ https://keybase.io/corvi
 
 I hereby claim:
 
-* I am an admin of http://www.corvi.co
-* I am corvi (https://keybase.io/corvi) on keybase.
-* I have a public key with fingerprint 1777 9882 8E6C 13D8 C6FE  B179 8F2D 6AF8 C7D0 E544
+  * I am an admin of http://www.corvi.co
+  * I am corvi (https://keybase.io/corvi) on keybase.
+  * I have a public key with fingerprint 1777 9882 8E6C 13D8 C6FE  B179 8F2D 6AF8 C7D0 E544
 
 To do so, I am signing this object:
 
 {
-	"body": {
-		"key": {
-			"eldest_kid": "012043bc6d0025dc74d2d19ae6014153e8cc0053a771293e98fc1f0006e4b1b1bd880a",
-			"fingerprint": "177798828e6c13d8c6feb1798f2d6af8c7d0e544",
-			"host": "keybase.io",
-			"key_id": "8f2d6af8c7d0e544",
-			"kid": "01010f68424ccdd429e746bf939115309e43a42597e0a02d8aa6a70cd3f4b9fc69ca0a",
-			"uid": "b69a2d62a1e41d75d8c8b04e9ea97819",
-			"username": "corvi"
-		},
-		"service": {
-			"hostname": "www.corvi.co",
-			"protocol": "http:"
-		},
-		"type": "web_service_binding",
-		"version": 1
-	},
-	"ctime": 1510184388,
-	"expire_in": 157680000,
-	"prev": "e4676403cfb2b01b3a2cfbfa08bc5a6c3ff47cf9c7ebbf8a60e285bee01571bf",
-	"seqno": 16,
-	"tag": "signature"
+  "body": {
+    "key": {
+      "eldest_kid": "012043bc6d0025dc74d2d19ae6014153e8cc0053a771293e98fc1f0006e4b1b1bd880a",
+      "fingerprint": "177798828e6c13d8c6feb1798f2d6af8c7d0e544",
+      "host": "keybase.io",
+      "key_id": "8f2d6af8c7d0e544",
+      "kid": "01010f68424ccdd429e746bf939115309e43a42597e0a02d8aa6a70cd3f4b9fc69ca0a",
+      "uid": "b69a2d62a1e41d75d8c8b04e9ea97819",
+      "username": "corvi"
+    },
+    "service": {
+      "hostname": "www.corvi.co",
+      "protocol": "http:"
+    },
+    "type": "web_service_binding",
+    "version": 1
+  },
+  "ctime": 1513470394,
+  "expire_in": 157680000,
+  "prev": "1ef12bfdd516e907ddd682b22cdb89dcb28437c97d6e49e1b2c68f4c278683b1",
+  "seqno": 29,
+  "tag": "signature"
 }
 
 which yields the signature:
@@ -50,30 +50,30 @@ which yields the signature:
 Version: Keybase OpenPGP v2.0.76
 Comment: https://keybase.io/crypto
 
-yMNsAnicbVJ7UFRVHGYBCZaUKDV5LNStJgtkzn3fu8xIOS2j5TgJmoDrLPdxLtwF
-9r2LSBCFKBBqDRhjjZZFA62NWppCjgiGxgCCC1pjBRIoCWoyjvHIKTu7o/81v5nz
-+P2+7zvf75zTtTAkSKvZs8I89+PF669pejsb3EE5IXu7SjHRKpdg+lKsAAYmWChD
-p8tUoMqYHgM4AShSlBgZAIKWJZaSCRnnBcgAnMJpEnKSBABNCiyLEzwJeU6RcAUA
-wEBKxFHIHAcELBlTVEsedNgcqsWFZHGWZXmOIzjISDgpcxKjQBFHKYWQGUHhJFYG
-kKYoRMy3Ov0MZE4UnDBFtaIc2pgC9v4H/8g3CoXhKIKSJFmmCB6yFCMqPMnjyDbg
-IUUKFEHzLAQCIGROEBiBBZJMKpTIKxLDS0LAtzsgJzK8gE4iBBxSuMzSyDEnAgry
-UOBZDuf9QCd0WIQiiNCS1eFRsbJkDKU8qgT9t+pv42G5uLg4JQBBIyLaHFaXVbIW
-okq+y2XT+4muElsACUXTQw2TqFpkdIeI4IEOp2q1YHocISWX6hfFadQwR5Ecl4zB
-rTbVAU2qH0GzDIdeA/iPgR4kCSmGZShASopIiAAXSYFAS0UAnCjRAiORikKxksJL
-LBRFhRMYAAmOFiEESAsXFczfld1iRdoM8inkIU2nmmcRXG4HxMrOdhpDgzTaoLAF
-wf7PFaSNeOLRl3vnXNS/z0a3nu5YnqdfVWP2/pZlCd14pv2I3dayGTfEGHffyZgz
-bNccr8j03cfqmwoOtsWNTnnpsEt1Q66staWbEmYvfNxcb9+YNr3jysSKnemGl/eZ
-+72nYLjuy5zI8g8HG7QOImJPyp9ny49O3ryx/u4Gu9l3Miay/4cHrz6ZOVv92S5L
-5Ylz/Ltbyh937N/29MzlhUtioo3e7kOGdHIk6uRzzZl1uquZ79fp1lP2oZqMj2bT
-wpNmd+uOfmFqmP/e/EvQmi7DRFft8D/fDNrrxXWEZoc6vh383XNwKem9Oj3WE3z8
-209qXzqgH912DXbuIht9L8S7ZkfvDay5ndezbKS3qb3vpzfSRlITjqwbb7v3fPGm
-/WNtM7QnMsc3ufrEcDpMibv9WANZaQinJqp0UcfmIpZ5O3qEweWVrQPhYbG17uk/
-MvXapKKL8bXdfdenNhyeyv18aW5G3ETG6fG9xjuXm96e1JeFdr8S8Xt045LomQv3
-Uy915I6daTde80QFp94MOb/IeGueyP4u9qlWe99biWLNyvZE6UCC+kx1mzpw+KtG
-41/aB/3JhYbgrGNuV1tzua6IyZ22dlfu89ytirRPVzCDSV9X2MoW6Xdu6ViweTjW
-PaRJNP8cfwtveTF1tMX33hXx/Kr5avupxZobBUMr59YuHrCnZbPZvb4Pfs2vev3N
-T+uqfKurS7Ye+g/66cUk
-=itgV
+yMNrAnicbVJ9TJVVGL+AiLH4MAUngY53GQ1vet7v91ywjHCNQYEWq1x5977nnBde
+Pu693A9udgWqNSwmQ1hKOTL8QD6SAHUIGC2whBQDCitNJyNowJyf5QVutt7L9L92
+tnN2nuf3+z2/5znnu7AgQ2hA1bN5cwMjU6kBF/o+cRm28909Hkqx4p2UyUPlk8WD
+FGDicJrzNUyZKEAzgGMVJGAAGB4jkcMMpqFMBEBzNM8SCSEAeFYWRZqBLIGSimgV
+ACAQTqH1hSUJyJSRUjVLDrHb7JrFqcvSoihCSWIkIiCaxRISVKLQekhlsCCrEhIx
+IDzH6cRcq8PP0M0psoNs0Kx6TL+YF+39D/6Rb32pgsQxHEIYcwwkIicoKmQhrdsG
+kHCszDE8FAmQAYMlWRZkESDMqpwCVSRAJC/6di3KKQKU9UqMTBOOxiKvO5YUwBFI
+ZChKNPQDHcRukQuJjkZWe7FGlRgpPVSsIeKfqr+Nh2m3271hEaLvOtFmtzqtyFqg
+Z3KdTpvJT3TutC0iiWJ+qGFWNAvWZ6gTiondoVktlInWkcip+UVpnmY5EbCQM1Lk
+HZtmJ2bNj+BFQdJfA/jLkGL/5IlKM4qKMU8LBAIRYyxIjMIwCCsSxEhhJI4VERSx
+/oKQ0AqDBEnlECNKgsQqNOXvqshipUwM1H3KObqmQ8uxyE6XnVAl/X1vLTEEhBqW
+Bgf6P5ch9LHIR1+upj/iQdzRXt/0+oyYUijHfOQ5EzGY1hw3FVI5E391tcfwY8PI
+4Jqs5148Xh1eMgPSBx1JxpB9o091xuR/+2BB+OCe8+/lfY25b86EvzD5VdnuKCrY
+PtrvGR8ZqLmcnPZv1fTafdfP117+YrZy1cueeS1t/9ZLKLHVbemWJ6+l3piOCKZf
+bfmVawBHvPePPTGWAVf9sKe3sta1/gp/4LXK3mOi6bP7T8LMip9Kg2qDEs0H48o3
+d81JVWHf1J2hLkU+ffP31b7fSrqa59wJrUr1ypNnQ/5ac84YPdieEr2ipb/68GRT
+5TCIbRuOok9F18T0GeX5t62Gwjt5viuW/THjHccRCcz5o7ysyVvjXcrufSbVlVBn
+N26j5osGbHdbE8Lqfx6KKtuTvRGNLNnxz2jmqdMt2YXLOk42zyfUpyfe67jjXtd1
+8ftdIb7k1t0Tpdu52/G5cCj1y8aP0w4szMpH3uAbarbMzAQdWrcl5eyt68tSwson
+Os8Pr31f2Jx1G441v9Jdd/jx16t8Jz7/tH5r54miJGdwdpqr5cPkg4ys9fSXsqmx
+Kw5NOLZlyTi8uOJc+47AoHejb7V5vUNJZb27bga0j57W2vO4u74b4wWm+YqJqxc2
+FnqbpnueP/rnytFrU5vyM8aqJHFv/HRIetvyWNsvQ2WNC66cyIsRDV9LL703sami
+viVDwbMlmZP/ARdbyDg=
+=LAtZ
 -----END PGP MESSAGE-----
 
 And finally, I am proving ownership of this host by posting or
