- Changed: styles of projects on the index page of mainsite app to match the styling of the index page of the project app.

--- a/mainsite/static/mainsite/styles/smain.css
+++ b/mainsite/static/mainsite/styles/smain.css
@@ -1667,6 +1667,21 @@ body.is-loading #header.alt .inner {
 }
 
 /* supplementals  */
+
+section#cta {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+section#cta > .project {
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+    width: 50%;
+}
+
 p.projects {
   margin: auto;
   text-align: center;
