--- a/mainsite/static/mainsite/styles/smain.css
+++ b/mainsite/static/mainsite/styles/smain.css
@@ -1679,7 +1679,9 @@ section#cta > .project {
     display: flex;
     flex-direction: column;
     align-items: space-between;
-    width: 50%;
+    justify-content: space-between;
+    margin: 1.5%;
+    width: 47%;
 }
 
 p.projects {
